# QOffice

./: .gitignore  .gitmodules  CMakeLists.txt  QOffice.pro  README.md  platforms.pri
examples/: CMakeLists.txt
examples/BasicWindow/: CMakeLists.txt  main.cpp
include/: QOfficeMenu  QOfficeWindow
include/QOffice/: Config.hpp
include/QOffice/Design/: Office.hpp  OfficeAccent.hpp  OfficeFont.hpp  OfficeImage.hpp  OfficeImaging.hpp  OfficePalette.hpp
include/QOffice/Exceptions/: OfficeAccentException.hpp  OfficeFontWeightException.hpp  OfficeImageException.hpp  OfficePaletteException.hpp
include/QOffice/Plugins/: OfficeMenuPlugin.hpp  OfficeWindowPlugin.hpp
include/QOffice/Plugins/Extensions/: OfficeMenuEditorDialog.hpp  OfficeMenuTaskMenu.hpp
include/QOffice/Widgets/: OfficeDropDown.hpp  OfficeLineEdit.hpp  OfficeMenu.hpp  OfficeMenuEvent.hpp  OfficeMenuHeader.hpp  OfficeMenuItem.hpp  OfficeMenuPanel.hpp  OfficeMenuPanelBar.hpp  OfficeMenuPinButton.hpp  OfficeMenuStickyButton.hpp  OfficeMenuSubMenu.hpp  OfficeMenuTopItem.hpp  OfficeTextbox.hpp  OfficeTooltip.hpp  OfficeWidget.hpp  OfficeWindow.hpp  OfficeWindowMenu.hpp  OfficeWindowMenuItem.hpp
include/QOffice/Widgets/Constants/: OfficeMenuConstants.hpp  OfficeTooltipConstants.hpp  OfficeWindowConstants.hpp
include/QOffice/Widgets/Dialogs/: OfficeWindow.hpp  OfficeWindowResizeArea.hpp  OfficeWindowTitlebar.hpp
include/QOffice/Widgets/Enums/: OfficeMenuEnums.hpp
include/QOffice/Widgets/MenuItems/: OfficeMenuTextboxItem.hpp
resources/: qoffice_editors.qrc  qoffice_fonts.qrc  qoffice_images.qrc  qoffice_plugins.qrc  qoffice_stylesheets.qrc
resources/qoffice/editors/: menueditor.ui
resources/qoffice/plugins/: officemenu.xml
resources/qoffice/stylesheets/: OfficeLineEdit.css  OfficeMenuPanelBar.css  OfficeTextbox.css
src/: CMakeLists.txt
src/Design/: CMakeLists.txt  Office.cpp  OfficeAccent.cpp  OfficeAccents.cpp  OfficeFont.cpp  OfficeImage.cpp  OfficeImaging.cpp  OfficePalette.cpp
src/Exceptions/: OfficeAccentException.cpp  OfficeFontWeightException.cpp  OfficeImageException.cpp  OfficePaletteException.cpp
src/Plugins/: OfficeMenuPlugin.cpp  OfficeWindowPlugin.cpp
src/Plugins/Extensions/: OfficeMenuEditorDialog.cpp  OfficeMenuTaskMenu.cpp
src/Widgets/: CMakeLists.txt  OfficeDropDown.cpp  OfficeLineEdit.cpp  OfficeMenu.cpp  OfficeMenuEvent.cpp  OfficeMenuHeader.cpp  OfficeMenuItem.cpp  OfficeMenuPanel.cpp  OfficeMenuPanelBar.cpp  OfficeMenuPinButton.cpp  OfficeMenuStickyButton.cpp  OfficeMenuSubMenu.cpp  OfficeMenuTopItem.cpp  OfficeTextbox.cpp  OfficeTooltip.cpp  OfficeWidget.cpp  OfficeWindow.cpp  OfficeWindowMenu.cpp  OfficeWindowMenuItem.cpp
src/Widgets/Dialogs/: OfficeWindow.cpp  OfficeWindowMenu.cpp  OfficeWindowResizeArea.cpp  OfficeWindowTitlebar.cpp
src/Widgets/MenuItems/: OfficeMenuTextboxItem.cpp
templates/: header.hpp  source.cpp
